--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
-    "pino-http": "^10.4.0"
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0"
   }
 }
