--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -18,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
     "pino-http": "^10.4.0",
