--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
   "name": "nodejs-hw-mongodb",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "nodejs-hw-mongodb",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/index",
+    "dev": "nodemon src/index"
   },
   "keywords": [],
-  "author": "Andrew_Chornenko <andriy.chornenko@ukr.net>",
+  "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
-    "eslint": "^9.26.0",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.24.0",
     "express": "^5.1.0",
-    "http-errors": "^2.0.0",
+    "globals": "^16.0.0",
+    "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.2",
-    "morgan": "^1.10.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.14.1",
+    "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "pino-http": "^10.4.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "yarn": "^1.22.22"
   }
 }
